grammar/AingalLangParser.py
# Generated from AingalLangParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AingalLangParser ( Parser ):

    grammarFileName = "AingalLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Start Program'", "'End Program'", "'Define Function'", 
                     "'End Function'", "'Return'", "'Call'", "'Set'", "'to'", 
                     "'Display'", "'If'", "'Else If'", "'Else'", "'End If'", 
                     "'For'", "'from'", "'in'", "'End For'", "'break'", 
                     "'While'", "'End While'", "'invert'", "''T'", "'parent'", 
                     "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'>'", "'<'", "'>='", "'<='", "'+='", "'-='", "'++'", 
                     "'--'", "'*='", "'/='", "'!='", "'and'", "'or'", "'not'", 
                     "';'", "','", "':'", "'.'", "'\"'", "'['", "']'", "'{'", 
                     "'}'", "'('", "')'", "<INVALID>", "<INVALID>", "'int'", 
                     "'string'", "'bool'", "'float'", "'matrix'", "'void'", 
                     "'true'", "'false'", "'pow'", "'sin'", "'cos'", "'tan'", 
                     "'ctan'" ]

    symbolicNames = [ "<INVALID>", "START_PROGRAM", "END_PROGRAM", "DEFINE_FUNCTION", 
                      "END_FUNCTION", "RETURN", "CALL", "SET", "TO", "DISPLAY", 
                      "IF", "ELSE_IF", "ELSE", "END_IF", "FOR", "FROM", 
                      "IN", "END_FOR", "BREAK", "WHILE", "END_WHILE", "INVERT_MATRIX", 
                      "TRANSPOSITION", "PARENT_SCOPE", "DCOLON", "PLUS", 
                      "MINUS", "MULTIPLY", "DIVIDED_BY", "MODULO", "EQUALS", 
                      "GREATER_THAN", "LESS_THAN", "GREATER_EQUAL", "LESS_EQUAL", 
                      "ADD_TO", "SUBTRACT_FROM", "INCREMENT", "DECREMENT", 
                      "TIMES", "DIVIDE_FROM", "NOT_EQUALS", "AND", "OR", 
                      "NOT", "SEMICOLON", "COMMA", "COLON", "DOT", "QUOTE", 
                      "LBRACK", "RBRACK", "LBRACE", "RBRACE", "LPAREN", 
                      "RPAREN", "NUMBER", "STRING", "TYPE_INT", "TYPE_STRING", 
                      "TYPE_BOOL", "TYPE_FLOAT", "TYPE_MATRIX", "TYPE_VOID", 
                      "TRUE_VALUE", "FALSE_VALUE", "POWER_FUNC", "SIN_FUNC", 
                      "COS_FUNC", "TAN_FUNC", "CTAN_FUNC", "IDENTIFIER", 
                      "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_loopStatements = 2
    RULE_variableDeclarationOrAssignment = 3
    RULE_matrixExpression = 4
    RULE_matrixAtom = 5
    RULE_matrixConstruction = 6
    RULE_row = 7
    RULE_value = 8
    RULE_stringExpression = 9
    RULE_expression = 10
    RULE_scopedIdentifier = 11
    RULE_typeAnnotation = 12
    RULE_functionDeclaration = 13
    RULE_parameter = 14
    RULE_typedParameter = 15
    RULE_returnStatement = 16
    RULE_functionCall = 17
    RULE_argumentList = 18
    RULE_builtInFunctions = 19
    RULE_ifStatement = 20
    RULE_loopIfStatement = 21
    RULE_loopStatement = 22
    RULE_forLoop = 23
    RULE_forInit = 24
    RULE_forUpdate = 25
    RULE_forBody = 26
    RULE_whileLoop = 27
    RULE_displayStatement = 28
    RULE_blockStatement = 29
    RULE_numExpression = 30
    RULE_term = 31
    RULE_factor = 32
    RULE_operation = 33
    RULE_leftHandSide = 34
    RULE_reassignment = 35
    RULE_boolExpression = 36
    RULE_boolOrExpression = 37
    RULE_boolAndExpression = 38
    RULE_boolNotExpression = 39
    RULE_boolPrimary = 40
    RULE_comparisonOp = 41

    ruleNames =  [ "program", "statement", "loopStatements", "variableDeclarationOrAssignment", 
                   "matrixExpression", "matrixAtom", "matrixConstruction", 
                   "row", "value", "stringExpression", "expression", "scopedIdentifier", 
                   "typeAnnotation", "functionDeclaration", "parameter", 
                   "typedParameter", "returnStatement", "functionCall", 
                   "argumentList", "builtInFunctions", "ifStatement", "loopIfStatement", 
                   "loopStatement", "forLoop", "forInit", "forUpdate", "forBody", 
                   "whileLoop", "displayStatement", "blockStatement", "numExpression", 
                   "term", "factor", "operation", "leftHandSide", "reassignment", 
                   "boolExpression", "boolOrExpression", "boolAndExpression", 
                   "boolNotExpression", "boolPrimary", "comparisonOp" ]

    EOF = Token.EOF
    START_PROGRAM=1
    END_PROGRAM=2
    DEFINE_FUNCTION=3
    END_FUNCTION=4
    RETURN=5
    CALL=6
    SET=7
    TO=8
    DISPLAY=9
    IF=10
    ELSE_IF=11
    ELSE=12
    END_IF=13
    FOR=14
    FROM=15
    IN=16
    END_FOR=17
    BREAK=18
    WHILE=19
    END_WHILE=20
    INVERT_MATRIX=21
    TRANSPOSITION=22
    PARENT_SCOPE=23
    DCOLON=24
    PLUS=25
    MINUS=26
    MULTIPLY=27
    DIVIDED_BY=28
    MODULO=29
    EQUALS=30
    GREATER_THAN=31
    LESS_THAN=32
    GREATER_EQUAL=33
    LESS_EQUAL=34
    ADD_TO=35
    SUBTRACT_FROM=36
    INCREMENT=37
    DECREMENT=38
    TIMES=39
    DIVIDE_FROM=40
    NOT_EQUALS=41
    AND=42
    OR=43
    NOT=44
    SEMICOLON=45
    COMMA=46
    COLON=47
    DOT=48
    QUOTE=49
    LBRACK=50
    RBRACK=51
    LBRACE=52
    RBRACE=53
    LPAREN=54
    RPAREN=55
    NUMBER=56
    STRING=57
    TYPE_INT=58
    TYPE_STRING=59
    TYPE_BOOL=60
    TYPE_FLOAT=61
    TYPE_MATRIX=62
    TYPE_VOID=63
    TRUE_VALUE=64
    FALSE_VALUE=65
    POWER_FUNC=66
    SIN_FUNC=67
    COS_FUNC=68
    TAN_FUNC=69
    CTAN_FUNC=70
    IDENTIFIER=71
    WS=72
    COMMENT=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START_PROGRAM(self):
            return self.getToken(AingalLangParser.START_PROGRAM, 0)

        def END_PROGRAM(self):
            return self.getToken(AingalLangParser.END_PROGRAM, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AingalLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(AingalLangParser.StatementContext,i)


        def getRuleIndex(self):
            return AingalLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AingalLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(AingalLangParser.START_PROGRAM)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self.statement()
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4503599636301544) != 0) or _la==71):
                    break

            self.state = 90
            self.match(AingalLangParser.END_PROGRAM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclarationOrAssignment(self):
            return self.getTypedRuleContext(AingalLangParser.VariableDeclarationOrAssignmentContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(AingalLangParser.FunctionDeclarationContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AingalLangParser.FunctionCallContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(AingalLangParser.ReturnStatementContext,0)


        def displayStatement(self):
            return self.getTypedRuleContext(AingalLangParser.DisplayStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(AingalLangParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(AingalLangParser.LoopStatementContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(AingalLangParser.ForLoopContext,0)


        def whileLoop(self):
            return self.getTypedRuleContext(AingalLangParser.WhileLoopContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(AingalLangParser.BlockStatementContext,0)


        def operation(self):
            return self.getTypedRuleContext(AingalLangParser.OperationContext,0)


        def getRuleIndex(self):
            return AingalLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AingalLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.variableDeclarationOrAssignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.functionDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.functionCall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 95
                self.returnStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.displayStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.ifStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 98
                self.loopStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 99
                self.forLoop()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 100
                self.whileLoop()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 101
                self.blockStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 102
                self.operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loopStatement(self):
            return self.getTypedRuleContext(AingalLangParser.LoopStatementContext,0)


        def variableDeclarationOrAssignment(self):
            return self.getTypedRuleContext(AingalLangParser.VariableDeclarationOrAssignmentContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(AingalLangParser.FunctionDeclarationContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(AingalLangParser.ReturnStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(AingalLangParser.IfStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(AingalLangParser.BlockStatementContext,0)


        def BREAK(self):
            return self.getToken(AingalLangParser.BREAK, 0)

        def displayStatement(self):
            return self.getTypedRuleContext(AingalLangParser.DisplayStatementContext,0)


        def getRuleIndex(self):
            return AingalLangParser.RULE_loopStatements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatements" ):
                listener.enterLoopStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatements" ):
                listener.exitLoopStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoopStatements" ):
                return visitor.visitLoopStatements(self)
            else:
                return visitor.visitChildren(self)




    def loopStatements(self):

        localctx = AingalLangParser.LoopStatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_loopStatements)
        try:
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.loopStatement()
                pass
            elif token in [7, 23, 71]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.variableDeclarationOrAssignment()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.functionDeclaration()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.returnStatement()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.ifStatement()
                pass
            elif token in [52]:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.blockStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 7)
                self.state = 111
                self.match(AingalLangParser.BREAK)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 112
                self.displayStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationOrAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(AingalLangParser.SET, 0)

        def TO(self):
            return self.getToken(AingalLangParser.TO, 0)

        def expression(self):
            return self.getTypedRuleContext(AingalLangParser.ExpressionContext,0)


        def scopedIdentifier(self):
            return self.getTypedRuleContext(AingalLangParser.ScopedIdentifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(AingalLangParser.IDENTIFIER, 0)

        def typeAnnotation(self):
            return self.getTypedRuleContext(AingalLangParser.TypeAnnotationContext,0)


        def getRuleIndex(self):
            return AingalLangParser.RULE_variableDeclarationOrAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationOrAssignment" ):
                listener.enterVariableDeclarationOrAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationOrAssignment" ):
                listener.exitVariableDeclarationOrAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarationOrAssignment" ):
                return visitor.visitVariableDeclarationOrAssignment(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarationOrAssignment(self):

        localctx = AingalLangParser.VariableDeclarationOrAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclarationOrAssignment)
        self._la = 0 # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(AingalLangParser.SET)
                self.state = 118
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [23]:
                    self.state = 116
                    self.scopedIdentifier()
                    pass
                elif token in [71]:
                    self.state = 117
                    self.match(AingalLangParser.IDENTIFIER)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 120
                self.match(AingalLangParser.TO)
                self.state = 121
                self.expression()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8935141660703064064) != 0):
                    self.state = 122
                    self.typeAnnotation()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 125
                    self.match(AingalLangParser.SET)


                self.state = 130
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [23]:
                    self.state = 128
                    self.scopedIdentifier()
                    pass
                elif token in [71]:
                    self.state = 129
                    self.match(AingalLangParser.IDENTIFIER)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 132
                self.match(AingalLangParser.TO)
                self.state = 133
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def matrixAtom(self):
            return self.getTypedRuleContext(AingalLangParser.MatrixAtomContext,0)


        def INVERT_MATRIX(self):
            return self.getToken(AingalLangParser.INVERT_MATRIX, 0)

        def TRANSPOSITION(self):
            return self.getToken(AingalLangParser.TRANSPOSITION, 0)

        def getRuleIndex(self):
            return AingalLangParser.RULE_matrixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixExpression" ):
                listener.enterMatrixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixExpression" ):
                listener.exitMatrixExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixExpression" ):
                return visitor.visitMatrixExpression(self)
            else:
                return visitor.visitChildren(self)




    def matrixExpression(self):

        localctx = AingalLangParser.MatrixExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_matrixExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 136
                self.match(AingalLangParser.INVERT_MATRIX)


            self.state = 139
            self.matrixAtom()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 140
                self.match(AingalLangParser.TRANSPOSITION)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(AingalLangParser.IDENTIFIER, 0)

        def matrixConstruction(self):
            return self.getTypedRuleContext(AingalLangParser.MatrixConstructionContext,0)


        def getRuleIndex(self):
            return AingalLangParser.RULE_matrixAtom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixAtom" ):
                listener.enterMatrixAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixAtom" ):
                listener.exitMatrixAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixAtom" ):
                return visitor.visitMatrixAtom(self)
            else:
                return visitor.visitChildren(self)




    def matrixAtom(self):

        localctx = AingalLangParser.MatrixAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_matrixAtom)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [71]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(AingalLangParser.IDENTIFIER)
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.matrixConstruction()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MatrixConstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(AingalLangParser.LBRACK, 0)

        def row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AingalLangParser.RowContext)
            else:
                return self.getTypedRuleContext(AingalLangParser.RowContext,i)


        def RBRACK(self):
            return self.getToken(AingalLangParser.RBRACK, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(AingalLangParser.SEMICOLON)
            else:
                return self.getToken(AingalLangParser.SEMICOLON, i)

        def getRuleIndex(self):
            return AingalLangParser.RULE_matrixConstruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrixConstruction" ):
                listener.enterMatrixConstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrixConstruction" ):
                listener.exitMatrixConstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixConstruction" ):
                return visitor.visitMatrixConstruction(self)
            else:
                return visitor.visitChildren(self)




    def matrixConstruction(self):

        localctx = AingalLangParser.MatrixConstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_matrixConstruction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(AingalLangParser.LBRACK)
            self.state = 148
            self.row()
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 149
                self.match(AingalLangParser.SEMICOLON)
                self.state = 150
                self.row()
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 156
            self.match(AingalLangParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AingalLangParser.ValueContext)
            else:
                return self.getTypedRuleContext(AingalLangParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(AingalLangParser.COMMA)
            else:
                return self.getToken(AingalLangParser.COMMA, i)

        def getRuleIndex(self):
            return AingalLangParser.RULE_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRow" ):
                listener.enterRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRow" ):
                listener.exitRow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRow" ):
                return visitor.visitRow(self)
            else:
                return visitor.visitChildren(self)




    def row(self):

        localctx = AingalLangParser.RowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.value()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 159
                self.match(AingalLangParser.COMMA)
                self.state = 160
                self.value()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(AingalLangParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(AingalLangParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return AingalLangParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = AingalLangParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            _la = self._input.LA(1)
            if not(_la==56 or _la==71):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

